# bazel6-ws-selenium-pinned

./: BUILD.bazel  README.md  WORKSPACE  maven_install.json
cpp_app/: BUILD
cpp_app/src/main/: hello.cc  hello.h  main.cc
cpp_app/src/test/: hello_test.cc
haskell/: BUILD.bazel  hello-hs.cabal
haskell/app/: Main.hs
haskell/src/: Hello.hs
java_app/: BUILD
java_app/src/main/java/com/example/: App.java
java_app/src/test/java/com/example/: AppTestNg.java  SeleniumSmokeTest.java
