
filegroup(
    name = "all_apps",
    srcs = [
        "//java_app:app",
        "//cpp_app:hello",
        "//haskell:hello_hs_app",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "all_tests",
    tests = [
        "//java_app:AppTestNg",
        "//java_app:SeleniumSmokeTest",
        "//cpp_app:hello_test",
    ],
    visibility = ["//visibility:public"],
)

