cabal-version:       2.4
name:                hello-hs
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:   Hello
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >= 4.14 && < 5, text >= 2.0 && < 3

executable hello-hs-app
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:     base >= 4.14 && < 5, hello-hs, text >= 2.0 && < 3
